updated http to https

--- a/Daniel/chat.html
+++ b/Daniel/chat.html
@@ -12,12 +12,12 @@
 <center><h1>JavaChat</h1></center>
 <hr size=5 width=90%>
 Ok, now heres the treat - my own IRC chatroom provided by -
-<A href="http://www.castlenet.org">Castlenet.Org</A>
+<A href="https://www.castlenet.org">Castlenet.Org</A>
 (click the link to visit their site)
 <br>
 <p>
 <CENTER> 
-<APPLET codebase="http://www.cumulus.org/~danb/" code="jirc.class"
+<APPLET codebase="https://www.cumulus.org/~danb/" code="jirc.class"
 width="600" height=400>
 <param name=server value="Cumulus.CO.CastleNet.Org">
 <param name=port value="6669">
@@ -39,7 +39,7 @@ width="600" height=400>
 My channel (#K'laura) is located on CastleNet (WhiteKnight.IN.CastleNet.Org 6667)
 <br>
 I just know some of you would like to use
-<a href="http://www.mirc.co.uk">mIRC</a>
+<a href="https://www.mirc.co.uk">mIRC</a>
 for it!
 </body>
 </html>
