--- a/Daniel/daniel.html
+++ b/Daniel/daniel.html
@@ -43,7 +43,7 @@ And if you want to rack your brain a bit try my "
 * I collect <a href="daniel3.html"><img alt="My M:TG Page" src="Images/mtglogo.gif"> </a>
 <br>
 One of my favorite Comp. Games is Mordor: The Depths of Dejenol & Mordor II: Darkness Awakining!
-<A href="http://www.vbdesigns.com/mordor"> Official Mordor 1&amp;2 web page</A>
+<A href="https://www.vbdesigns.com/mordor"> Official Mordor 1&amp;2 web page</A>
 <br>
 I also play a game called Heroes of Might and Magic 2: The Succession Wars.
 <br>
@@ -63,31 +63,31 @@ Which, now is a seperate page (of course)
 Some sites i've found and are the building block of my page, some may not exist, so if that's the
 case, then e-mail me.
 <br>
-<A href="http://www.interplay.com"> Interplay </A>--
-<a href="http://www.gamesdomain.co.uk"> Games Domain </a> --
-<A href="http://execpc.com/~esc"> Educational Software Co-op</A> --
-<A href="http://www.mecc.com"> MECC Software</A> -- 
+<A href="https://www.interplay.com"> Interplay </A>--
+<a href="https://www.gamesdomain.co.uk"> Games Domain </a> --
+<A href="https://execpc.com/~esc"> Educational Software Co-op</A> --
+<A href="https://www.mecc.com"> MECC Software</A> -- 
 <br>
-<A href="http://www.discovery.com"> Discovery Channel </A> --
-<A href="http://www.aetv.com">A&amp;E TV</A> --
-<A href="http://www.pbs.org">PBS </A> --
-<A href="http://www.weather.com">The Weather Channel</A>
+<A href="https://www.discovery.com"> Discovery Channel </A> --
+<A href="https://www.aetv.com">A&amp;E TV</A> --
+<A href="https://www.pbs.org">PBS </A> --
+<A href="https://www.weather.com">The Weather Channel</A>
 <br>
-<a href="http://cosi.org/"> COSI </a> --
-<a href="http://sln.fi.edu/"> Franklin Science Museum </a> --
-<A href="http://www.kscvisitor.com"> Kennedy Space Center </A> --
-<A href="http://www.nps.gov/alcatraz"> Alcatraz </A> --
+<a href="https://cosi.org/"> COSI </a> --
+<a href="https://sln.fi.edu/"> Franklin Science Museum </a> --
+<A href="https://www.kscvisitor.com"> Kennedy Space Center </A> --
+<A href="https://www.nps.gov/alcatraz"> Alcatraz </A> --
 <br>
-<A HREF="http://www.LEGO.com/"> LEGO World</A> --
-<A href="http://pages.prodigy.com/coolbrian/kidsweb.html"> Kids Web</a> --
-<A href="http://www.inx.de/~daniel/index.html"> Kids on the web</A> --
-<A href="http://www.dallas.net/~smithwar"> Yendorian Tales RPG </A> --
-<A href="http://gamemusic.ncy.com"> Game Music </A> --
-<A href="http://w3.one.net/~bzimov/cards/gameorama.html"> Game-O-Rama </A> 
+<A HREF="https://www.LEGO.com/"> LEGO World</A> --
+<A href="https://pages.prodigy.com/coolbrian/kidsweb.html"> Kids Web</a> --
+<A href="https://www.inx.de/~daniel/index.html"> Kids on the web</A> --
+<A href="https://www.dallas.net/~smithwar"> Yendorian Tales RPG </A> --
+<A href="https://gamemusic.ncy.com"> Game Music </A> --
+<A href="https://w3.one.net/~bzimov/cards/gameorama.html"> Game-O-Rama </A> 
 * Game-o-rama is a whiteboard table of cells that any board game can
 played over the net.
 <p><center><img alt="Green Stone" src="Images/an-greenstone.gif"></center>
-<A href="http://channelone.com/">Channel One News</A>               
+<A href="https://channelone.com/">Channel One News</A>               
 <p><center><img alt="Blue Stone" src="Images/an-bluestone.gif"></center>
 <br>
 * Set this site on your bookmarks...
@@ -113,7 +113,7 @@ Email to me, the only webmaster of this page,
 Daniel D. Norris at - <A href="mailto:dnorris@zoomnet.net"> Zoomnet </A>
 </p>
 <p align=center>You are visitor number 
- <IMG SRC="http://counter.zoomnet.net/cgi-bin/counter.exe?link=http://www.zoomnet.net/~dnorris/daniel.html&style=handwriting&width=7" alt="999,999"> to this site since Nov 22, 1997 </p>
+ <IMG SRC="https://counter.zoomnet.net/cgi-bin/counter.exe?link=https://www.zoomnet.net/~dnorris/daniel.html&style=handwriting&width=7" alt="999,999"> to this site since Nov 22, 1997 </p>
 <br>
 * To those who have other interests:
 <img align=left alt="Eyeballs" src="Images/an-lookrite.gif">
@@ -140,6 +140,6 @@ A star system for my favorites!!
 ... and aren't you SURE that you want to go? 
 
 If ya' wanna go back to the Norris' Index page, then click
-<A href="http://www.zoomnet.net/~dnorris"> Here </A>  
+<A href="https://www.zoomnet.net/~dnorris"> Here </A>  
 </body>
 </html>
