--- a/Daniel/daniel2.html
+++ b/Daniel/daniel2.html
@@ -27,7 +27,7 @@ I attend Valley Middle School (Rural) 7th Grade
 I've been programming with Quick Basic 4.5. And have made a few games with it.
 <br>
 I enjoy 
-<a href="http://www.wizards.com">Magic</a>
+<a href="https://www.wizards.com">Magic</a>
 : The Gathering.
 <br>
 I may not have very many updates on my pages because I spend time programming, watching TV, or
@@ -46,7 +46,7 @@ to return to my main page!
 Email to Me, the operator of this page, Daniel - <A href="mailto:dnorris@zoomnet.net">  Zoomnet </A>
 </p>
 <p align=center>You are visitor number 
-<IMG src="http://www.zoomnet.net/cgi-bin/nph-count?link=http://www.zoomnet.net/~dnorris/daniel/daniel2.html" > to this site since Jan 1, 1997 </p>
+<IMG src="https://www.zoomnet.net/cgi-bin/nph-count?link=https://www.zoomnet.net/~dnorris/daniel/daniel2.html" > to this site since Jan 1, 1997 </p>
 <br>
 * To those who have other interests:
 <img align=left alt="Eyeballs" src="Images/an-lookrite.gif">
