--- a/Daniel/daniel3.html
+++ b/Daniel/daniel3.html
@@ -81,7 +81,7 @@ To return to my main page.
 E-mail to Me, the operator of this page, Daniel - <A href="mailto:dnorris@zoomnet.net">  Zoomnet </A>
 </p>
 <p align=center>You are visitor number 
-<IMG src="http://www.zoomnet.net/cgi-bin/nph-count?link=http://www.zoomnet.net/~dnorris/daniel3.html" > to this site since whenever. </p>
+<IMG src="https://www.zoomnet.net/cgi-bin/nph-count?link=https://www.zoomnet.net/~dnorris/daniel3.html" > to this site since whenever. </p>
 <br>
 </body>
 </html>
