--- a/Daniel/daniel4.html
+++ b/Daniel/daniel4.html
@@ -19,10 +19,10 @@ Welcome to the Overkiller's Hideaway! This page is all about maps for games, or 
 <br> 
 <p>
 ok, The
-<a href="http://www.webleague.com/oracle/">Oracle League</a>
+<a href="httpss://www.webleague.com/oracle/">Oracle League</a>
 is a great league for HOMM2 players, even I am a member there.
 <br>
-<A href="http://www.newworldcomputing.com"> Heroes of Might and Magic II: The Succession Wars </A> Maps:
+<A href="httpss://www.newworldcomputing.com"> Heroes of Might and Magic II: The Succession Wars </A> Maps:
 <br>
 <TABLE border="1" align="center" >
 <TR>
@@ -82,7 +82,7 @@ is a great league for HOMM2 players, even I am a member there.
 </TABLE>
 <br>
 <p>
-<A href="http://www.newworldcomputing.com">Heroes of Might and Magic II: The Price of Loyalty</A> Maps
+<A href="https://www.newworldcomputing.com">Heroes of Might and Magic II: The Price of Loyalty</A> Maps
 <TABLE border="1" align="center" >
 <TR>
 <TD> Name:         </TD>
@@ -100,7 +100,7 @@ is a great league for HOMM2 players, even I am a member there.
 </TABLE>
 <br>
 <p>
-<A href="http://www.spidweb.com">Blades of Exile</A> Maps
+<A href="https://www.spidweb.com">Blades of Exile</A> Maps
 <TABLE border="1" align="center" >
 <TR>
 <TD> Name:         </TD>
