--- a/buffy.html
+++ b/buffy.html
@@ -52,7 +52,7 @@ III eaat a foood called Tarter Diet.(Yummy!)
 Email to BUFFY at - <A href="mailto:dnorris@zoomnet.net">  Zoomnet </A>
 </p>
 <p align=center>HEY! There are  
- <IMG SRC="http://counter.zoomnet.net/cgi-bin/counter.exe?link=http://www.zoomnet.net/~dnorris/buffy.html&style=handwriting&width=7" alt="999,999"> Buffy adorers in the world! </p>
+ <IMG SRC="https://counter.zoomnet.net/cgi-bin/counter.exe?link=https://www.zoomnet.net/~dnorris/buffy.html&style=handwriting&width=7" alt="999,999"> Buffy adorers in the world! </p>
 <br>
 </body>
 </html>
