--- a/dave.html
+++ b/dave.html
@@ -34,13 +34,13 @@
 
 <LI>Originally from <a href="Images/monroe.jpg">Monroe County</A>, <a href="Images/ohio1.gif">Ohio</a>.
 
-<li>Graduated from <a href="http://www.woodsfieldalumni.com/"> Woodsfield High School in 1969 </a>.
+<li>Graduated from <a href="https://www.woodsfieldalumni.com/"> Woodsfield High School in 1969 </a>.
 
-<li>Attended <a href="http://www.eastern.ohiou.edu/index.htm">Ohio University (Belmont County Campus)</a> 2 years
+<li>Attended <a href="https://www.eastern.ohiou.edu/index.htm">Ohio University (Belmont County Campus)</a> 2 years
 
-<li>Graduated from <a href="http://www.osu.edu"> The Ohio State University</a> in 1974 with a Bachelor of Science in Civil Engineering
+<li>Graduated from <a href="https://www.osu.edu"> The Ohio State University</a> in 1974 with a Bachelor of Science in Civil Engineering
 
-<li>Employed with the <a href="http://www.dot.state.oh.us"> Ohio Department of Transportation </a> District 9 office in Chillicothe from Sept 1974 to Dec 2006. Retired Nov 30, 2006.
+<li>Employed with the <a href="https://www.dot.state.oh.us"> Ohio Department of Transportation </a> District 9 office in Chillicothe from Sept 1974 to Dec 2006. Retired Nov 30, 2006.
 
 <li>Registered in the State of Ohio as a Professional Engineer
 
