--- a/deb.html
+++ b/deb.html
@@ -18,10 +18,10 @@
 <UL>
 <li>Born in Washington, PA
 <li>1977 Graduate of Unioto High School near Chillicothe.                   
-<li>1980/81 Graduate of <a href="http://www.chillicothe.ohiou.edu/">Ohio University </a>(Chillicothe Campus) 
-<li>1993 Graduate of <a href="http://www.capital.edu">Capital University</a> with a Masters in Business Administration.
+<li>1980/81 Graduate of <a href="https://www.chillicothe.ohiou.edu/">Ohio University </a>(Chillicothe Campus) 
+<li>1993 Graduate of <a href="https://www.capital.edu">Capital University</a> with a Masters in Business Administration.
 <li>Was employed in the Mental Health field from 1978 to 1994.
-<li>Currently on disability retirement due to <A href="http://www.nmss.org">Multiple Sclerosis</a>.
+<li>Currently on disability retirement due to <A href="https://www.nmss.org">Multiple Sclerosis</a>.
 <li>I enjoy reading, watching old movies and spending time with my family.
 </ul>
 </p>
