--- a/design.htm
+++ b/design.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<!-- saved from url=(0043)http://www.dot.state.oh.us/dist9/design.htm -->
-<!-- saved from url=(0043)http://www.dot.state.oh.us/dist9/design.htm --><HTML><HEAD><TITLE>Major Projects Under Design</TITLE>
+<!-- saved from url=(0043)https://www.dot.state.oh.us/dist9/design.htm -->
+<!-- saved from url=(0043)https://www.dot.state.oh.us/dist9/design.htm --><HTML><HEAD><TITLE>Major Projects Under Design</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
 <META content="MSHTML 5.50.4134.600" name=GENERATOR></HEAD>
 <BODY text=#000000 bgColor=#ffffff>
@@ -74,9 +74,9 @@ completion
 cost </BIG><BR><BIG>&#8226; Summer 2003 begin construction </BIG><BR><BIG>&#8226; 2004 
 completion 
 
-<P><FONT size=5><A href="http://www.dot.state.oh.us/dist9/PRODUCT.HTM">Return to 
+<P><FONT size=5><A href="https://www.dot.state.oh.us/dist9/PRODUCT.HTM">Return to 
 Production Office Page</A></FONT></P>
-<P><FONT size=5><A href="http://www.dot.state.oh.us/dist9/D09FRONT.HTM">Return 
+<P><FONT size=5><A href="https://www.dot.state.oh.us/dist9/D09FRONT.HTM">Return 
 to District 9 Home Page</A></FONT></P>
 <P><BIG><FONT color=#ff0000>This page last edited: <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%B %d, %Y" startspan -->January 
 20, 
