--- a/golf_0.html
+++ b/golf_0.html
@@ -252,8 +252,8 @@ Sound files:
 </table>
 <p>
 
-<a href="http://www.cambridgeoh.com/home/knorris/Linksls.html"> Kevins Links Golf page </a> --
-<a href="http://www.geocities.com/Colosseum/Field/6634/chip.htm"> Chipping chart </a> --
+<a href="https://www.cambridgeoh.com/home/knorris/Linksls.html"> Kevins Links Golf page </a> --
+<a href="https://www.geocities.com/Colosseum/Field/6634/chip.htm"> Chipping chart </a> --
 
 </center>
 
