--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <hr />
 <CENTER><!--IMG SRC="Images/bar_blue.gif" WIDTH="560" HEIGHT="11" ALT=""--></CENTER>
 
-<center><h2>OHIO STATE BUCKEYES <a href="http://www.ohiostatebuckeyes.com/sports/m-footbl/sched/osu-m-footbl-sched.html">Football </a> Schedule </h2></center>
+<center><h2>OHIO STATE BUCKEYES <a href="https://www.ohiostatebuckeyes.com/sports/m-footbl/sched/osu-m-footbl-sched.html">Football </a> Schedule </h2></center>
 <center><img align=bottom alt="New!" src="Images/new3.gif"></center>
 
 <!--......................................................................................................-->
@@ -57,7 +57,7 @@ See our <A href="ccf.html"> "adopted" children </A>
   <tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Michigan State </td><td> Noon Fox </td><td> W 56 - 7  </td><td>          </td></tr>
   <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> Noon Fox </td><td> L 27 - 42 </td><td>          </td></tr>
 </table></center>
-<center><h3>Jan 01, 2022  Rose Bowl vs. Utah </h3></center>
+<center><h3>Jan 01, 2022  Rose Bowl vs. Utah 5:00 PM ESPN W 48 - 45</h3></center>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
@@ -151,7 +151,7 @@ Thoughts of thee bid darkness go,
 Dear Alma Mater -- O hi o. 
 </pre></center></h3>
 <p><hr />
-<center>Mens <a href="http://www.ohiostatebuckeyes.com/">  OSU Stuff </a></center>
+<center>Mens <a href="https://www.ohiostatebuckeyes.com/">  OSU Stuff </a></center>
 <hr />
 <p align=center>
 <center><h2>Try these favorite <a href="dave_0.html"> sites </a></h2></center>
