--- a/osu12.html
+++ b/osu12.html
@@ -24,33 +24,33 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2012 </h1><br>
 <table border="1" align="center" >
 
-<td>Sept 01</td><td><A href="http://muredhawks.cstv.com/sports/m-footbl/mioh-m-footbl-body.html"> Miami (OH) </a>  </td><td> Noon BTN</td><td> W 56 - 10</td><td> slow start, but explosive 2nd Q, BMiller: 165 yds rushing </font></td></tr>
+<td>Sept 01</td><td><A href="https://muredhawks.cstv.com/sports/m-footbl/mioh-m-footbl-body.html"> Miami (OH) </a>  </td><td> Noon BTN</td><td> W 56 - 10</td><td> slow start, but explosive 2nd Q, BMiller: 165 yds rushing </font></td></tr>
 
-<td>Sept 08</td><td><A href="http://www.ucfathletics.com/sports/m-footbl/sched/ucf-m-footbl-sched.html"> Central Florida </a> </td><td> Noon ESPN2 </td><td>  W 31 -16 </td><td> Hot/cold at times. BMiller: 3 rushing TDs & 1 passing </td></tr>
+<td>Sept 08</td><td><A href="https://www.ucfathletics.com/sports/m-footbl/sched/ucf-m-footbl-sched.html"> Central Florida </a> </td><td> Noon ESPN2 </td><td>  W 31 -16 </td><td> Hot/cold at times. BMiller: 3 rushing TDs & 1 passing </td></tr>
 
-<td>Sept 15</td><td><A href="http://calbears.cstv.com/sports/m-footbl/cal-m-footbl-body.html"> California </a>  </td><td> Noon ABC </td><td>  W 35 - 28 </td><td> Sloppy game, BMiller: 5 TDs (4P, 1R) </td></tr>
+<td>Sept 15</td><td><A href="https://calbears.cstv.com/sports/m-footbl/cal-m-footbl-body.html"> California </a>  </td><td> Noon ABC </td><td>  W 35 - 28 </td><td> Sloppy game, BMiller: 5 TDs (4P, 1R) </td></tr>
 
-<td>Sept 22</td><td><A href="http://uabsports.cstv.com/sports/m-footbl/albr-m-footbl-body.html"> UAB </a> (Alumni Band)  </td><td> Noon BTN </td><td>  W 29 - 15 </td><td>BMiller:2 TD, 143 yd P, 64 R </td></tr>
+<td>Sept 22</td><td><A href="https://uabsports.cstv.com/sports/m-footbl/albr-m-footbl-body.html"> UAB </a> (Alumni Band)  </td><td> Noon BTN </td><td>  W 29 - 15 </td><td>BMiller:2 TD, 143 yd P, 64 R </td></tr>
 
-<td>Sept 29</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td>3:30 ABC </td><td>  W 17 - 16</td><td> BMiller: 1 TD, 136 yd R, 179 P </td></tr>
+<td>Sept 29</td><td><A href="https://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td>3:30 ABC </td><td>  W 17 - 16</td><td> BMiller: 1 TD, 136 yd R, 179 P </td></tr>
 
-<td>Oct 06 </td><td><A href="http://www.huskers.com/SportSelect.dbml?SPID=22&DB_OEM_ID=100"> Nebraska </a> </td><td> 8:00 ABC </td><td> W 63 - 38</td><td> BMiller: 186 R, 127P. CHyde: 140R, 4TD </td></tr>
+<td>Oct 06 </td><td><A href="https://www.huskers.com/SportSelect.dbml?SPID=22&DB_OEM_ID=100"> Nebraska </a> </td><td> 8:00 ABC </td><td> W 63 - 38</td><td> BMiller: 186 R, 127P. CHyde: 140R, 4TD </td></tr>
 
-<td>Oct 13 </td><td><A href="http://www.indiana.edu/~athlweb/graphic/sports/football.html"> @ Indiana </a> </td><td> 8:00 BTN </td><td>  W 52 - 49</td><td> BMiller: 211P, 149R, 2TD; CHyde: 156R. (I hate night games) </td></tr>
+<td>Oct 13 </td><td><A href="https://www.indiana.edu/~athlweb/graphic/sports/football.html"> @ Indiana </a> </td><td> 8:00 BTN </td><td>  W 52 - 49</td><td> BMiller: 211P, 149R, 2TD; CHyde: 156R. (I hate night games) </td></tr>
 
-<td>Oct 20 </td><td><A href="http://www.purduesports.ocsn.com/sports/m-footbl/pur-m-footbl-body.html"> Purdue </a> </td><td> Noon ABC </td><td>  W 29 - 22 OT </td><td>Bad O, bad D, bad ST, BM injured, great comeback by KG </td></tr>
+<td>Oct 20 </td><td><A href="https://www.purduesports.ocsn.com/sports/m-footbl/pur-m-footbl-body.html"> Purdue </a> </td><td> Noon ABC </td><td>  W 29 - 22 OT </td><td>Bad O, bad D, bad ST, BM injured, great comeback by KG </td></tr>
 
-<td>Oct 27 </td><td><A href="http://www.gopsusports.com/sports/m-footbl/"> @ Penn State </a> </td><td> 5:30 ESPN </td><td>  W 35 - 23</td><td> BMiller: 134R, 143P, 2 TD</td></tr>
+<td>Oct 27 </td><td><A href="https://www.gopsusports.com/sports/m-footbl/"> @ Penn State </a> </td><td> 5:30 ESPN </td><td>  W 35 - 23</td><td> BMiller: 134R, 143P, 2 TD</td></tr>
 
-<td>Nov 03 </td><td><A href="http://www.fightingillini.com/htm/football/football.html"> Illinois </a> </td><td> 3:30 ESPN </td><td>  W 52 - 22</td><td> BMiller: 226P, 1TD, 73R; CHyde: 137R, 3 TD </td></tr>
+<td>Nov 03 </td><td><A href="https://www.fightingillini.com/htm/football/football.html"> Illinois </a> </td><td> 3:30 ESPN </td><td>  W 52 - 22</td><td> BMiller: 226P, 1TD, 73R; CHyde: 137R, 3 TD </td></tr>
 
 <td>Nov 10 </td><td><A href=""> BYE </a> </td><td> ---  </td><td>  . </td><td> .  </td></tr>
 
-<td>Nov 17 </td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> @ Wisconsin </a> </td><td> 3:30 ABC </td><td>  W 21 - 14 OT</td><td> BMiller: 48R, 97P CHyde: 87R;2 TD; Leader Division CHAMPS! </td></tr>
+<td>Nov 17 </td><td><A href="https://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> @ Wisconsin </a> </td><td> 3:30 ABC </td><td>  W 21 - 14 OT</td><td> BMiller: 48R, 97P CHyde: 87R;2 TD; Leader Division CHAMPS! </td></tr>
 
-<td>Nov 24 </td><td><A href="http://mgoblue.com/football/">scUM </a> </td><td> 12:00 ABC </td><td> W 26 - 21</td><td> BMiller:189P,1TD;CHyde:146R, 1TD; scum never crossed the 50 2nd half </td></tr>
+<td>Nov 24 </td><td><A href="https://mgoblue.com/football/">scUM </a> </td><td> 12:00 ABC </td><td> W 26 - 21</td><td> BMiller:189P,1TD;CHyde:146R, 1TD; scum never crossed the 50 2nd half </td></tr>
 
-<td>Dec 01 </td><td><A href="http://www.bigten.org/sports/m-footbl/archive/091610aac.html"> B1G Championship w/o Bucks  </a> </td><td> 8:15? Fox Sports? </td><td> na  </td><td> na </td></tr>
+<td>Dec 01 </td><td><A href="https://www.bigten.org/sports/m-footbl/archive/091610aac.html"> B1G Championship w/o Bucks  </a> </td><td> 8:15? Fox Sports? </td><td> na  </td><td> na </td></tr>
 
 </table>
 
