--- a/osu99.html
+++ b/osu99.html
@@ -18,29 +18,29 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center>1999<br>
 <table border="1" align="center" >
 
-<td>Aug 29</td><td><A href="http://www.miami.edu/athletics/football/">Miami </a>(@ Kickoff Classic) 2:30  ABC </td><td> Gave it away </td><td><font color=red> 12 - 23 </font></td></tr>
+<td>Aug 29</td><td><A href="https://www.miami.edu/athletics/football/">Miami </a>(@ Kickoff Classic) 2:30  ABC </td><td> Gave it away </td><td><font color=red> 12 - 23 </font></td></tr>
 
-<td>Sept 11</td><td><A href="http://www.fansonly.com/schools/ucla/sports/m-footbl/ucla-m-footbl-body.html">UCLA </a>(Hall of Fame) 8:00 pm ABC </td><td> 4th ever night game, W  </td><td> 42 - 20 </td></tr>
+<td>Sept 11</td><td><A href="https://www.fansonly.com/schools/ucla/sports/m-footbl/ucla-m-footbl-body.html">UCLA </a>(Hall of Fame) 8:00 pm ABC </td><td> 4th ever night game, W  </td><td> 42 - 20 </td></tr>
 
-<td>Sept 18</td><td><A href="http://www.ohiou.edu/">Ohio University </a>3:30 ABC (Alumni Band) </td><td> Slow start, Won  </td><td> 40 - 16 </td></tr>
+<td>Sept 18</td><td><A href="https://www.ohiou.edu/">Ohio University </a>3:30 ABC (Alumni Band) </td><td> Slow start, Won  </td><td> 40 - 16 </td></tr>
 
-<td>Sept 25</td><td><A href="http://blues.fd1.uc.edu/www/bearcats/football.htmlx"> Cincinnati </a>12:10 ESPN+ </td><td> Another slow start, Won </td><td> 34 - 20 </td></tr>
+<td>Sept 25</td><td><A href="https://blues.fd1.uc.edu/www/bearcats/football.htmlx"> Cincinnati </a>12:10 ESPN+ </td><td> Another slow start, Won </td><td> 34 - 20 </td></tr>
 
-<td>Oct  02</td><td><A href="http://www.wisc.edu/ath/sport/fb/index.html/">Wisconsin </a> 3:30 ABC </td><td>Pathetic second half - L</td><td><font color=red>17 - 42 </font></td></tr>
+<td>Oct  02</td><td><A href="https://www.wisc.edu/ath/sport/fb/index.html/">Wisconsin </a> 3:30 ABC </td><td>Pathetic second half - L</td><td><font color=red>17 - 42 </font></td></tr>
 
-<td>Oct  09</td><td><A href="http://www.purduesports.com/"> Purdue  </a> 3:30 ABC </td><td>A wild & wet game - W   </td><td>25 - 22 </td></tr>
+<td>Oct  09</td><td><A href="https://www.purduesports.com/"> Purdue  </a> 3:30 ABC </td><td>A wild & wet game - W   </td><td>25 - 22 </td></tr>
 
-<td>Oct  16</td><td><A href="http://www.gopsusports.com/football/">@ Penn State </a>12:00 ABC </td><td>Absoutely No Offense!! - L </td><td><font color=red>10 - 23 </td></tr></font>
+<td>Oct  16</td><td><A href="https://www.gopsusports.com/football/">@ Penn State </a>12:00 ABC </td><td>Absoutely No Offense!! - L </td><td><font color=red>10 - 23 </td></tr></font>
 
-<td>Oct  23</td><td><A href="http://www.gophersports.com/mFball/">@ Minnesota </a>12:10 ESPN </td><td>Close, but a W  </td><td> 20 - 17 </td></tr>
+<td>Oct  23</td><td><A href="https://www.gophersports.com/mFball/">@ Minnesota </a>12:10 ESPN </td><td>Close, but a W  </td><td> 20 - 17 </td></tr>
 
-<td>Oct  30</td><td><A href="http://www.hawkeyesports.com/football/index.htm"> Iowa </a>12:10 ESPN+ (Homecoming)  </td><td> Archie's #45 retired - W  </td><td>41 - 11 </td></tr>
+<td>Oct  30</td><td><A href="https://www.hawkeyesports.com/football/index.htm"> Iowa </a>12:10 ESPN+ (Homecoming)  </td><td> Archie's #45 retired - W  </td><td>41 - 11 </td></tr>
 
-<td>Nov  06</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html">@ Michigan State </a> 12:10 ESPN</td><td>Absoutely No Offense!! - L </td><td><font color=red> 7 - 23 </td></tr></font>
+<td>Nov  06</td><td><A href="https://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html">@ Michigan State </a> 12:10 ESPN</td><td>Absoutely No Offense!! - L </td><td><font color=red> 7 - 23 </td></tr></font>
 
-<td>Nov  13</td><td><A href="http://www.fightingillini.com/htm/football2/fball_parent.html"> Illinois  </a>12:10 ESPN2 </td><td>Same-o   </td><td><font color=red>20 - 46</td></tr></font>
+<td>Nov  13</td><td><A href="https://www.fightingillini.com/htm/football2/fball_parent.html"> Illinois  </a>12:10 ESPN2 </td><td>Same-o   </td><td><font color=red>20 - 46</td></tr></font>
 
-<td>Nov  20</td><td><A href="http://mgoblue.com/football/">@ scUM </a> 12:00 ABC </td><td>Led most of the game, but L </td><td><font color = red> 17 - 24 </td></tr></font>
+<td>Nov  20</td><td><A href="https://mgoblue.com/football/">@ scUM </a> 12:00 ABC </td><td>Led most of the game, but L </td><td><font color = red> 17 - 24 </td></tr></font>
 </table>
 
 <center><h2>Jan 1  No BOWL this year! </h2></center>
