--- a/major.htm
+++ b/major.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<!-- saved from url=(0042)http://www.dot.state.oh.us/dist9/major.htm -->
+<!-- saved from url=(0042)https://www.dot.state.oh.us/dist9/major.htm -->
 <HTML><HEAD><TITLE>Major Projects Under Construction</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
 <META content="MSHTML 5.50.4134.600" name=GENERATOR></HEAD>
@@ -34,9 +34,9 @@ construction </BIG><BR><BIG>&#8226; 2001 completion
 estimated cost </BIG><BR><BIG>&#8226;Spring 2000 begin construction 
 <P>
 <P>
-<P><FONT size=5><A href="http://www.dot.state.oh.us/dist9/PRODUCT.HTM">Return to 
+<P><FONT size=5><A href="https://www.dot.state.oh.us/dist9/PRODUCT.HTM">Return to 
 Production Office Page</A></FONT></P>
-<P><FONT size=5><A href="http://www.dot.state.oh.us/dist9/D09FRONT.HTM">Return 
+<P><FONT size=5><A href="https://www.dot.state.oh.us/dist9/D09FRONT.HTM">Return 
 to District 9 Home Page</A></FONT></P>
 <P><BIG><FONT color=#ff0000>This page last edited: <!--webbot bot="Timestamp" S-Type="EDITED" S-Format="%B %d, %Y" startspan -->January 
 20, 
