--- a/osu06.html
+++ b/osu06.html
@@ -16,30 +16,30 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2006 </h1><br>
 <table border="1" align="center" >
 
-<td>Sept 02</td><td><A href="http://niuhuskies.cstv.com/"> Northern Illinois </a>(Alumni Band) 3:30 ABC </td><td> W 35 - 12</td><td> TS with 3 TD passes, easy win </font></td></tr>
+<td>Sept 02</td><td><A href="https://niuhuskies.cstv.com/"> Northern Illinois </a>(Alumni Band) 3:30 ABC </td><td> W 35 - 12</td><td> TS with 3 TD passes, easy win </font></td></tr>
 
-<td>Sept 09</td><td><A href="http://www.mackbrown-texasfootball.com/"> @ Texas </a> 8:00 ABC </td><td>  W 24 - 7 </td><td> Good game, Gonzo, Ginn & Pittman with TD's </td></tr>
+<td>Sept 09</td><td><A href="https://www.mackbrown-texasfootball.com/"> @ Texas </a> 8:00 ABC </td><td>  W 24 - 7 </td><td> Good game, Gonzo, Ginn & Pittman with TD's </td></tr>
 
-<td>Sept 16</td><td><A href="http://www.ucbearcats.com/sports/football/">Cincinnati </a> Noon ESPN+ </td><td>  W 37 - 7 </td><td>Slow start, good second half </td></tr>
+<td>Sept 16</td><td><A href="https://www.ucbearcats.com/sports/football/">Cincinnati </a> Noon ESPN+ </td><td>  W 37 - 7 </td><td>Slow start, good second half </td></tr>
 
-<td>Sept 23</td><td><A href="http://www.gopsusports.com/football//"> Penn State </a> 3:30 ABC </td><td>  W 28 - 6</td><td> 
+<td>Sept 23</td><td><A href="https://www.gopsusports.com/football//"> Penn State </a> 3:30 ABC </td><td>  W 28 - 6</td><td> 
 Pittman, Robiskie, & D with 2 TD's, rainy </td></tr>
 
-<td>Sept 30</td><td><A href="http://hawkeyesports.ocsn.com/sports/m-footbl/iowa-m-footbl-body.html"> @ Iowa </a> 8:00 ABC </td><td>  W 38 - 17</td><td> TS 4 TD throws, AP with TD, Def with 3 Ints+1fumble </td></tr>
+<td>Sept 30</td><td><A href="https://hawkeyesports.ocsn.com/sports/m-footbl/iowa-m-footbl-body.html"> @ Iowa </a> 8:00 ABC </td><td>  W 38 - 17</td><td> TS 4 TD throws, AP with TD, Def with 3 Ints+1fumble </td></tr>
 
-<td>Oct  07</td><td><A href="http://bgsufalcons.collegesports.com/"> Bowling Green </a> 3:30 ESPN+</td><td>  W 35 - 7 </td><td> TS with 3 TD throws, AP with 2 TD runs </td></tr>
+<td>Oct  07</td><td><A href="https://bgsufalcons.collegesports.com/"> Bowling Green </a> 3:30 ESPN+</td><td>  W 35 - 7 </td><td> TS with 3 TD throws, AP with 2 TD runs </td></tr>
 
-<td>Oct  14</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> 3:30 ABC</td><td>  W 38 - 7 </td><td> TS 2 TD passes, TG2 punt return TD  </td></tr>
+<td>Oct  14</td><td><A href="https://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> 3:30 ABC</td><td>  W 38 - 7 </td><td> TS 2 TD passes, TG2 punt return TD  </td></tr>
 
-<td>Oct  21</td><td><A href="http://iuhoosiers.com/index.html"> Indiana </a> Noon ESPU only</td><td>  W 44 - 3 </td><td> TS with 4 TD throws, TG2 with 1 </td></tr>
+<td>Oct  21</td><td><A href="https://iuhoosiers.com/index.html"> Indiana </a> Noon ESPU only</td><td>  W 44 - 3 </td><td> TS with 4 TD throws, TG2 with 1 </td></tr>
 
-<td>Oct  28</td><td><A href="http://www.gophersports.com/mFball/"> Minnesota </a> 3:30 ABC/ESPN Homecoming </td><td>  W 44 - 0</td><td> Pittman 116 yds, 2 TD </td></tr>
+<td>Oct  28</td><td><A href="https://www.gophersports.com/mFball/"> Minnesota </a> 3:30 ABC/ESPN Homecoming </td><td>  W 44 - 0</td><td> Pittman 116 yds, 2 TD </td></tr>
 
-<td>Nov  04</td><td><A href="http://fightingillini.ocsn.com/sports/m-footbl/ill-m-footbl-body.html"> @ Illinois </a> </td><td> W 17 - 10 </td><td> CW & AP with TD runs, Illini played tough in the second half </td></tr>
+<td>Nov  04</td><td><A href="https://fightingillini.ocsn.com/sports/m-footbl/ill-m-footbl-body.html"> @ Illinois </a> </td><td> W 17 - 10 </td><td> CW & AP with TD runs, Illini played tough in the second half </td></tr>
 
-<td>Nov  11</td><td><A href="http://www.nusports.com/sports/m-footbl/"> @ Northwestern </a> </td><td>  W 54 - 10</td><td> TS with 4 TD passes </td></tr>
+<td>Nov  11</td><td><A href="https://www.nusports.com/sports/m-footbl/"> @ Northwestern </a> </td><td>  W 54 - 10</td><td> TS with 4 TD passes </td></tr>
 
-<td>Nov  18</td><td><A href="http://mgoblue.com/football/">scUM </a>  3:30 ABC </td><td> W 42 - 39</td><td> TS with 4 TD passes, AP & CW with long TD runs </td></tr>
+<td>Nov  18</td><td><A href="https://mgoblue.com/football/">scUM </a>  3:30 ABC </td><td> W 42 - 39</td><td> TS with 4 TD passes, AP & CW with long TD runs </td></tr>
 </table>
 
 <center><h1><font color = red>Outright Big Ten Champs 12 - 0    </center></font>
