--- a/osu08.html
+++ b/osu08.html
@@ -18,23 +18,23 @@ var t = new Date(document.lastModified);
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
 </SCRIPT> </p>
 
-<center><h2>OHIO STATE BUCKEYES <a href="http://www.ohiostatebuckeyes.com//SportSelect.dbml?ATCLID=&DB_MENU_ID=&CARTKEY=&PALBID=&DB_OEM_ID=17300&SPID=10408&SPSID=87745">Football </a> Schedule </h2></center>
+<center><h2>OHIO STATE BUCKEYES <a href="https://www.ohiostatebuckeyes.com//SportSelect.dbml?ATCLID=&DB_MENU_ID=&CARTKEY=&PALBID=&DB_OEM_ID=17300&SPID=10408&SPSID=87745">Football </a> Schedule </h2></center>
 <center><h1> 2008 </h1><br>
 <table border="1" align="center" >
 
-<td>Aug 30 </td><td><A href="http://www.ysu.edu/sports/football/index.htm"> Youngstown State </a> </td><td> Noon BTN </td><td>  W 43 - 0</td><td> 3 QB played, Beanie hurt foot </td></tr>
-<td>Sep 06 </td><td><A href="http://ohiobobcats.cstv.com/sports/m-footbl/ohio-m-footbl-body.html"> Ohio U </a> </td><td> Noon ESPN </td><td>  W 26 - 14</td><td> No Beanie, poor offense first half </td></tr>
-<td>Sep 13 </td><td><A href="http://usctrojans.cstv.com/sports/m-footbl/usc-m-footbl-body.html"> @ #1 USC </a> </td><td> 8:00 ABC </td><td> <font color = red> L 03 - 35 </font></td><td> No Beanie, No O, No D </td></tr>
-<td>Sep 20 </td><td><A href="http://www.troytrojans.com/"> Troy U </a> </td><td> Noon BTN </td><td>  W 28 - 10 </td><td> No Beanie, T. Pryor started, threw 4 TD passes </td></tr>
-<td>Sep 27 </td><td><A href="http://www.gophersports.com/SportSelect.dbml?DB_OEM_ID=8400&KEY=&SPID=3280&SPSID=38605"> Minnesota </a> </td><td> Noon BTN  </td><td>  W 34 - 21</td><td> Beanie back, D gave up 2 late garbage TD's </td></tr>
-<td>Oct 04 </td><td><A href="http://www.uwbadgers.com"> @ Wisconsin </a> </td><td>8:00 ABC</td><td>  W 20 - 17 </td><td> Beanie 168 yds, 1 TD, T. Pryor TD in last minute </td></tr>
-<td>Oct 11 </td><td><A href="http://purduesports.ocsn.com/sports/m-footbl/pur-m-footbl-body.html"> Purdue </a> </td><td> 3:30 ABC </td><td>  W 16 - 3 </td><td> Blocked FG for TD, 3 FG, no O </td></tr>
-<td>Oct 18 </td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td> 3:30 ABC </td><td>  W 45 - 7</td><td> Beanie 2 TD's, 2 D TD's, got 5 turnovers  </td><tr> 
-<td>Oct 25 </td><td><A href="http://www.gopsusports.com/football//"> #3 Penn State </a>  </td><td>8:00 ABC </td><td>  <font color = red>L 06 - 13 </font></td><td> Good D, but TP fumble let Pee St score a TD </td></tr>
-<td>Nov 01 </td><td><A href="http://steelerslive.com/storylink/top/day"> BYE </a> </td><td> . </td><td> .  </td><td> . </td></tr>
-<td>Nov 08 </td><td><A href="http://www.nusports.com/sports/m-footbl/"> @ Northwestern </a> </td><td> Noon ESPN2 </td><td>  W 45 - 10</td><td> TP 3 TD passes, Beanie 140 yd, 2 TD </td></tr>
-<td>Nov 15</td><td><A href="http://fightingillini.ocsn.com/sports/m-footbl/ill-m-footbl-body.html"> @ Illinois </a> </td><td> Noon ESPN </td><td> W 30 - 20</td><td>  TP 110 yds 1 TD, CW 143 yds 1 TD </td></tr>
-<td>Nov 22</td><td><A href="http://mgoblue.com/football/"> scUM </a>  </td><td>12:00 ABC </td><td> W 42 - 7 </td><td> CW 1TD, Hartline 2TD, Herron 2 TD, Robo 1TD, No FGs </td></tr>
+<td>Aug 30 </td><td><A href="https://www.ysu.edu/sports/football/index.htm"> Youngstown State </a> </td><td> Noon BTN </td><td>  W 43 - 0</td><td> 3 QB played, Beanie hurt foot </td></tr>
+<td>Sep 06 </td><td><A href="https://ohiobobcats.cstv.com/sports/m-footbl/ohio-m-footbl-body.html"> Ohio U </a> </td><td> Noon ESPN </td><td>  W 26 - 14</td><td> No Beanie, poor offense first half </td></tr>
+<td>Sep 13 </td><td><A href="https://usctrojans.cstv.com/sports/m-footbl/usc-m-footbl-body.html"> @ #1 USC </a> </td><td> 8:00 ABC </td><td> <font color = red> L 03 - 35 </font></td><td> No Beanie, No O, No D </td></tr>
+<td>Sep 20 </td><td><A href="https://www.troytrojans.com/"> Troy U </a> </td><td> Noon BTN </td><td>  W 28 - 10 </td><td> No Beanie, T. Pryor started, threw 4 TD passes </td></tr>
+<td>Sep 27 </td><td><A href="https://www.gophersports.com/SportSelect.dbml?DB_OEM_ID=8400&KEY=&SPID=3280&SPSID=38605"> Minnesota </a> </td><td> Noon BTN  </td><td>  W 34 - 21</td><td> Beanie back, D gave up 2 late garbage TD's </td></tr>
+<td>Oct 04 </td><td><A href="https://www.uwbadgers.com"> @ Wisconsin </a> </td><td>8:00 ABC</td><td>  W 20 - 17 </td><td> Beanie 168 yds, 1 TD, T. Pryor TD in last minute </td></tr>
+<td>Oct 11 </td><td><A href="https://purduesports.ocsn.com/sports/m-footbl/pur-m-footbl-body.html"> Purdue </a> </td><td> 3:30 ABC </td><td>  W 16 - 3 </td><td> Blocked FG for TD, 3 FG, no O </td></tr>
+<td>Oct 18 </td><td><A href="https://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td> 3:30 ABC </td><td>  W 45 - 7</td><td> Beanie 2 TD's, 2 D TD's, got 5 turnovers  </td><tr> 
+<td>Oct 25 </td><td><A href="https://www.gopsusports.com/football//"> #3 Penn State </a>  </td><td>8:00 ABC </td><td>  <font color = red>L 06 - 13 </font></td><td> Good D, but TP fumble let Pee St score a TD </td></tr>
+<td>Nov 01 </td><td><A href="https://steelerslive.com/storylink/top/day"> BYE </a> </td><td> . </td><td> .  </td><td> . </td></tr>
+<td>Nov 08 </td><td><A href="https://www.nusports.com/sports/m-footbl/"> @ Northwestern </a> </td><td> Noon ESPN2 </td><td>  W 45 - 10</td><td> TP 3 TD passes, Beanie 140 yd, 2 TD </td></tr>
+<td>Nov 15</td><td><A href="https://fightingillini.ocsn.com/sports/m-footbl/ill-m-footbl-body.html"> @ Illinois </a> </td><td> Noon ESPN </td><td> W 30 - 20</td><td>  TP 110 yds 1 TD, CW 143 yds 1 TD </td></tr>
+<td>Nov 22</td><td><A href="https://mgoblue.com/football/"> scUM </a>  </td><td>12:00 ABC </td><td> W 42 - 7 </td><td> CW 1TD, Hartline 2TD, Herron 2 TD, Robo 1TD, No FGs </td></tr>
 </table>
 
 <center><font color = red><h2>Go Bucks!!! Big 10 Co-
