--- a/osu09.html
+++ b/osu09.html
@@ -19,27 +19,27 @@ var t = new Date(document.lastModified);
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
 </SCRIPT> </p>
 
-<center><h2>OHIO STATE BUCKEYES <a href="http://www.ohiostatebuckeyes.com//SportSelect.dbml?ATCLID=&DB_MENU_ID=&CARTKEY=&PALBID=&DB_OEM_ID=17300&SPID=10408&SPSID=87745">Football </a> Schedule </h2></center>
+<center><h2>OHIO STATE BUCKEYES <a href="https://www.ohiostatebuckeyes.com//SportSelect.dbml?ATCLID=&DB_MENU_ID=&CARTKEY=&PALBID=&DB_OEM_ID=17300&SPID=10408&SPSID=87745">Football </a> Schedule </h2></center>
 <!---------------------------------------------------------------------------->
 <center><h1> 2009 </h1><br>
 <table border="1" align="center" >
-<td>Sept 05</td><td><A href="http://navysports.cstv.com/sports/m-footbl/navy-m-footbl-body.html"> Navy </a> </td><td> Noon ESPN </td><td> W 31 - 27 </td><td> young team, several mistakes, but a good test </td></tr>
-<td>Sept 12</td><td><A href="http://usctrojans.cstv.com/sports/m-footbl/usc-m-footbl-body.html"> USC  </a> </td><td> 8:00 ESPN </td><td> <font color = red> L 15 - 18 </font> </td><td> Played tough D, little O, led most of the game </td></tr>
-<td>Sept 19</td><td><A href="http://www.utoledo.edu/athletics/nonframe/football/football.html"> Toledo (@ Cleveland)  </a> </td><td> Noon ESPN+ </td><td> W 38 - 0 </td><td> TP played better, but threw 2 Ints </td></tr>
-<td>Sept 26</td><td><A href="http://www.fightingillini.com/htm/football/football.html"> Illinois </a>  </td><td> 3:30 ABC </td><td> W 30 - 0 </td><td> Great D, TP needs to improve..(Terri) </td></tr>
-<td>Oct  03</td><td><A href="http://www.indiana.edu/~athlweb/graphic/sports/football.html"> @ Indiana  </a> </td><td> 7:00 BTN </td><td> W 33 - 14 </td><td> Hot & cold, IU got a garbage TD at the end </td></tr>
-<td>Oct  10</td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> Wisconsin  </a> </td><td> 3:30 ABC/ESPN </td><td> W 31 - 13 </td><td> not much O, Great D - 2 pick-6's and KO return for TD's </td></tr>
-<td>Oct  17</td><td><A href="http://www.purduesports.com/"> @ Purdue  </a> </td><td> Noon BTN </td><td> <font color = red> L 18 - 26 </font>  </td><td> Horrible game, turnovers & crappy offense </td></tr>
-<td>Oct  24</td><td><A href="http://www.gophersports.com/mFball/"> Minnesota </a> </td><td> Noon ESPN </td><td> W 38 - 7 </td><td> Much better Offense (MaryKate) </td></tr>
-<td>Oct  31</td><td><A href="http://www.nmstatesports.com/"> New Mexico State  </a> </td><td> Noon BTN </td><td> W 45 - 0 </td><td> 28 points in 2Q, TP didn't play 2nd half </td></tr>
-<td>Nov  07</td><td><A href="http://www.psu.edu/sports/football/Football.html"> @ Penn State </a> </td><td> 3:30 ABC </td><td> W 24 - 7 </td><td> TP ran for a TD & threw for 2 </font></td></tr>
-<td>Nov  14</td><td><A href="http://www.hawkeyesports.com/football/index.htm"> Iowa   </a> </td><td> 3:30 ABC </td><td> W 27 - 24 OT </td><td>  Tough game, but Bucks clinch B10 Title, go to Rose Bowl </td></tr>
-<td>Nov  21</td><td><A href="http://www.umich.edu/~mgoblue/Football/"> @ scUM  </a> </td><td> 12:00 ABC </td><td> W 21 - 10 </td><td> Won Big Ten outright, JT 8-1, 6 in a row. </td></tr>
+<td>Sept 05</td><td><A href="https://navysports.cstv.com/sports/m-footbl/navy-m-footbl-body.html"> Navy </a> </td><td> Noon ESPN </td><td> W 31 - 27 </td><td> young team, several mistakes, but a good test </td></tr>
+<td>Sept 12</td><td><A href="https://usctrojans.cstv.com/sports/m-footbl/usc-m-footbl-body.html"> USC  </a> </td><td> 8:00 ESPN </td><td> <font color = red> L 15 - 18 </font> </td><td> Played tough D, little O, led most of the game </td></tr>
+<td>Sept 19</td><td><A href="https://www.utoledo.edu/athletics/nonframe/football/football.html"> Toledo (@ Cleveland)  </a> </td><td> Noon ESPN+ </td><td> W 38 - 0 </td><td> TP played better, but threw 2 Ints </td></tr>
+<td>Sept 26</td><td><A href="https://www.fightingillini.com/htm/football/football.html"> Illinois </a>  </td><td> 3:30 ABC </td><td> W 30 - 0 </td><td> Great D, TP needs to improve..(Terri) </td></tr>
+<td>Oct  03</td><td><A href="https://www.indiana.edu/~athlweb/graphic/sports/football.html"> @ Indiana  </a> </td><td> 7:00 BTN </td><td> W 33 - 14 </td><td> Hot & cold, IU got a garbage TD at the end </td></tr>
+<td>Oct  10</td><td><A href="https://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> Wisconsin  </a> </td><td> 3:30 ABC/ESPN </td><td> W 31 - 13 </td><td> not much O, Great D - 2 pick-6's and KO return for TD's </td></tr>
+<td>Oct  17</td><td><A href="https://www.purduesports.com/"> @ Purdue  </a> </td><td> Noon BTN </td><td> <font color = red> L 18 - 26 </font>  </td><td> Horrible game, turnovers & crappy offense </td></tr>
+<td>Oct  24</td><td><A href="https://www.gophersports.com/mFball/"> Minnesota </a> </td><td> Noon ESPN </td><td> W 38 - 7 </td><td> Much better Offense (MaryKate) </td></tr>
+<td>Oct  31</td><td><A href="https://www.nmstatesports.com/"> New Mexico State  </a> </td><td> Noon BTN </td><td> W 45 - 0 </td><td> 28 points in 2Q, TP didn't play 2nd half </td></tr>
+<td>Nov  07</td><td><A href="https://www.psu.edu/sports/football/Football.html"> @ Penn State </a> </td><td> 3:30 ABC </td><td> W 24 - 7 </td><td> TP ran for a TD & threw for 2 </font></td></tr>
+<td>Nov  14</td><td><A href="https://www.hawkeyesports.com/football/index.htm"> Iowa   </a> </td><td> 3:30 ABC </td><td> W 27 - 24 OT </td><td>  Tough game, but Bucks clinch B10 Title, go to Rose Bowl </td></tr>
+<td>Nov  21</td><td><A href="https://www.umich.edu/~mgoblue/Football/"> @ scUM  </a> </td><td> 12:00 ABC </td><td> W 21 - 10 </td><td> Won Big Ten outright, JT 8-1, 6 in a row. </td></tr>
 </table>
 <!------------------------------------------------------------------------------->
 
 <center><font color = red><h2>Go Bucks!!! </center></h2> </font>
-<center><h2>Jan 1, 2010 <a href="http://www.tournamentofroses.com/rosebowlgame/"> Rose Bowl </a> vs. Oregon - Won 26 - 17 </center>  </h2> 
+<center><h2>Jan 1, 2010 <a href="https://www.tournamentofroses.com/rosebowlgame/"> Rose Bowl </a> vs. Oregon - Won 26 - 17 </center>  </h2> 
 <h3>
 
 <p><center> and M*ch*g*n still sucks!</center>
