--- a/osu14.html
+++ b/osu14.html
@@ -14,7 +14,7 @@ var t = new Date(document.lastModified);
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
 </SCRIPT> </p>
 
-<center><h2><a href="http://ohiostatebuckeyes.ocsn.com/sports/m-footbl/osu-m-footbl-body.html"> OHIO STATE BUCKEYES Football Schedule </a> </h2></center>
+<center><h2><a href="https://ohiostatebuckeyes.ocsn.com/sports/m-footbl/osu-m-footbl-body.html"> OHIO STATE BUCKEYES Football Schedule </a> </h2></center>
 <!--......................................................................................................-->
 <center><h1> 2014 </h1><br>
 <table border="1" align="center" >
@@ -28,13 +28,13 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <td>Oct 04 </td><td><A href=""> @ Maryland </a> </td><td>Noon ABC </td><td>  W 52 - 24</td><td> JTB 267P, 103R,5 TD; EzE 139R </td></tr>
 <td>Oct 11 </td><td><A href=""> BYE </a> </td><td> --- </td><td> .  </td><td> . </td></tr>
 <td>Oct 18 </td><td><A href=""> Rutgers </a> </td><td> 3:30 ABC/ESPN/2 </td><td> W 56 - 17 </td><td> JTB 107R, 261P, 5 TD </td></tr>
-<td>Oct 25 </td><td><A href="http://www.gopsusports.com/sports/m-footbl/"> @ Penn State </a> </td><td> 8:00 ABC/ESPN/2 </td><td> W 31 - 24 2OT </td><td> Eze 119R; JTB 94R, 74P,3TD </td></tr>
-<td>Nov 01 </td><td><A href="http://www.fightingillini.com/htm/football/football.html"> Illinois </a> </td><td> 8:00 ABC/ESPN/2 </td><td> W 55 - 14 </td><td> EzE 70R; JTB 167P, 2TD; C Jones 82P, 2 TD </td></tr>
-<td>Nov 08 </td><td><A href="http://"> @ Mich State </a> </td><td> 8:00 ABC </td><td> W 49 - 37</td><td> EzE 159R, 2 TD; JTB 108R, 300P, 5 TD </td></tr>
+<td>Oct 25 </td><td><A href="https://www.gopsusports.com/sports/m-footbl/"> @ Penn State </a> </td><td> 8:00 ABC/ESPN/2 </td><td> W 31 - 24 2OT </td><td> Eze 119R; JTB 94R, 74P,3TD </td></tr>
+<td>Nov 01 </td><td><A href="https://www.fightingillini.com/htm/football/football.html"> Illinois </a> </td><td> 8:00 ABC/ESPN/2 </td><td> W 55 - 14 </td><td> EzE 70R; JTB 167P, 2TD; C Jones 82P, 2 TD </td></tr>
+<td>Nov 08 </td><td><A href="https://"> @ Mich State </a> </td><td> 8:00 ABC </td><td> W 49 - 37</td><td> EzE 159R, 2 TD; JTB 108R, 300P, 5 TD </td></tr>
 <td>Nov 15 </td><td><A href=" "> @ Minnesota </a> </td><td> Noon ABC </td><td> W 31 - 24 </td><td> JTB 200P, 195R, 4TD; EzE 96R </td></tr>
-<td>Nov 22 </td><td><A href="http://www.indiana.edu/~athlweb/graphic/sports/football.html"> Indiana </a> </td><td> Noon BTN </td><td> W 42 - 27 </td><td>  JTB 92R, 302P, 4TD; EzE 107R; JMarshall 4TD</td></tr>
-<td>Nov 29 </td><td><A href="http://www.umich.edu/~mgoblue/Football/"> scUM  </a> </td><td> 12:00 ABC </td><td> W 42 - 28 </td><td> JTB hurt, C Jones </td></tr>
-<td>Dec 06 </td><td><A href="http://www.bigten.org/sports/m-footbl/archive/091610aac.html"> B1G Championship game vs Wisconsin </a> </td><td> 8:15 Fox </td><td> W 59 - 0 </td><td> C Jones first start </td></tr>
+<td>Nov 22 </td><td><A href="https://www.indiana.edu/~athlweb/graphic/sports/football.html"> Indiana </a> </td><td> Noon BTN </td><td> W 42 - 27 </td><td>  JTB 92R, 302P, 4TD; EzE 107R; JMarshall 4TD</td></tr>
+<td>Nov 29 </td><td><A href="https://www.umich.edu/~mgoblue/Football/"> scUM  </a> </td><td> 12:00 ABC </td><td> W 42 - 28 </td><td> JTB hurt, C Jones </td></tr>
+<td>Dec 06 </td><td><A href="https://www.bigten.org/sports/m-footbl/archive/091610aac.html"> B1G Championship game vs Wisconsin </a> </td><td> 8:15 Fox </td><td> W 59 - 0 </td><td> C Jones first start </td></tr>
 </table>
 
 <center><h2>Jan 1, 2015  Allstate Sugar Bowl vs. Alabama   W 42 - 35 </h2></center>
