--- a/osu16.html
+++ b/osu16.html
@@ -14,7 +14,7 @@ var t = new Date(document.lastModified);
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
 </SCRIPT> </p>
 
-<center><h2><a href="http://ohiostatebuckeyes.ocsn.com/sports/m-footbl/osu-m-footbl-body.html"> OHIO STATE BUCKEYES Football Schedule </a> </h2></center>
+<center><h2><a href="https://ohiostatebuckeyes.ocsn.com/sports/m-footbl/osu-m-footbl-body.html"> OHIO STATE BUCKEYES Football Schedule </a> </h2></center>
 <!---->
 
 <center><h1> 2016 </h1><br>
@@ -26,15 +26,15 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <td>Sept 17</td><td><A href=""> @ Oklahoma  </a> </td><td> 7:30 Fox </td><td> W 45 - 24 </td><td> note </td></tr>
 <td>Sept 24</td><td><A href=""> BYE  </a> </td><td> . </td><td> .  </td><td> . </td></tr>
 <td>Oct 01 </td><td><A href=""> Rutgers </a> </td><td> Noon BTN </td><td>  W 58 - 0 </td><td> note</td></tr>
-<td>Oct 08 </td><td><A href="http://www.indiana.edu/~athlweb/graphic/sports/football.html"> Indiana </a> </td><td> 3:30 ESPN </td><td> W 38 - 17 </td><td>  note </td></tr>
-<td>Oct 15 </td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> @ Wisconsin </a> </td><td> 8:00 pm ABC </td><td> W 30 - 23 OT </td><td> note </td></tr>
+<td>Oct 08 </td><td><A href="https://www.indiana.edu/~athlweb/graphic/sports/football.html"> Indiana </a> </td><td> 3:30 ESPN </td><td> W 38 - 17 </td><td>  note </td></tr>
+<td>Oct 15 </td><td><A href="https://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> @ Wisconsin </a> </td><td> 8:00 pm ABC </td><td> W 30 - 23 OT </td><td> note </td></tr>
 <td>Oct 22 </td><td><A href=""> @ Penn State </a> </td><td> 8:00 pm ABC </td><td> <font color = red>L 21 - 24 </font></td><td> note </td></tr>
 <td>Oct 29 </td><td><A href=""> Northwestern  </a> </td><td> 3:30 pm ESPN </td><td> W 24 - 20 </td><td> note </td></tr>
 <td>Nov 05 </td><td><A href=""> Nebraska   </a> </td><td> 8:00 pm ABC </td><td> W 62 - 3</td><td> note </td></tr>
 <td>Nov 12 </td><td><A href=""> @ Maryland   </a> </td><td> 3:30 ESPN</td><td> W 62 - 3 </td><td> note </td></tr>
-<td>Nov 19 </td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td> Noon ESPN</td><td> W 17 - 16 </td><td>  note </td></tr>
-<td>Nov 26 </td><td><A href="http://www.umich.edu/~mgoblue/Football/"> scUM  </a> </td><td> Noon ABC </td><td> W 30 - 27 2OT </td><td> note </td></tr>
-<td>Dec 03 </td><td><A href="http://www.bigten.org/sports/m-footbl/archive/091610aac.html"> B1G Champ game  </a> </td><td> 8:00 Fox </td><td> na  </td><td> na . . . . . . . . . . . . . . . . . . . . . </td></tr>
+<td>Nov 19 </td><td><A href="https://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td> Noon ESPN</td><td> W 17 - 16 </td><td>  note </td></tr>
+<td>Nov 26 </td><td><A href="https://www.umich.edu/~mgoblue/Football/"> scUM  </a> </td><td> Noon ABC </td><td> W 30 - 27 2OT </td><td> note </td></tr>
+<td>Dec 03 </td><td><A href="https://www.bigten.org/sports/m-footbl/archive/091610aac.html"> B1G Champ game  </a> </td><td> 8:00 Fox </td><td> na  </td><td> na . . . . . . . . . . . . . . . . . . . . . </td></tr>
 
 </table>
 <center><h2>Dec 31, 2016  Fiesta Bowl vs. Clemson  <font color = red>  L 0 - 31 </h2></center></font>
