--- a/osu98.html
+++ b/osu98.html
@@ -19,18 +19,18 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 1998<br>
 <table border="1" align="center" >
-<td>Sept 05</td><td><A href="http://www.wvu.edu/~sports/football/">@ West Virginia </a></td><td> W  </td><td> 34 - 17 </td></tr>
-<td>Sept 12</td><td><A href="http://www.utoledo.edu/athletics/nonframe/football/football.html">Toledo  </a></td><td> W  </td><td> 49 - 00 </td></tr>
-<td>Sept 19</td><td><A href="http://www.mutigers.com/sports/fb/news/">Missouri  </a></td><td> W  </td><td> 45 - 14 </td></tr>
-<td>Sept 26</td><td><A href="http://www.dallascowboys.com/">Dallas Cowboys </a> </td><td> T  </td><td> 00 - 00 </td></tr>
-<td>Oct  03</td><td><A href="http://www.psu.edu/sports/football/Football.html">Penn State  </a></td><td> W  </td><td>28 - 09 </td></tr>
-<td>Oct  10</td><td><A href="http://www.fightingillini.com/htm/football/football.html">@ Illinois  </a></td><td> W  </td><td> 41 - 00 </td></tr>
-<td>Oct  17</td><td><A href="http://www.gophersports.com/mFball/">Minnesota  </a></td><td> W  </td><td> 45 - 15 </td></tr>
-<td>Oct  24</td><td><A href="http://www.nusports.com/sports/m-footbl/">@ Northwestern </a></td><td> W  </td><td> 36 - 10 </td></tr>
-<td>Oct  31</td><td><A href="http://www.indiana.edu/~athlweb/graphic/sports/football.html">@ Indiana  </a></td><td> W  </td><td>38 - 7 </td></tr>
-<td>Nov  07</td><td><A href="http://www.indiana.edu/~athlweb/graphic/sports/football.html">Michigan State </a></td><td> L  </td><td><font color=red> 24 - 28 </font></td></tr>
-<td>Nov  14</td><td><A href="http://www.hawkeyesports.com/football/index.htm">@ Iowa   </a></td><td> W  </td><td>45 - 14 </td></tr>
-<td>Nov  21</td><td><A href="http://www.umich.edu/~mgoblue/Football/">scUM  </a></td><td> W  </td><td>31 - 16 </td></tr>
+<td>Sept 05</td><td><A href="https://www.wvu.edu/~sports/football/">@ West Virginia </a></td><td> W  </td><td> 34 - 17 </td></tr>
+<td>Sept 12</td><td><A href="https://www.utoledo.edu/athletics/nonframe/football/football.html">Toledo  </a></td><td> W  </td><td> 49 - 00 </td></tr>
+<td>Sept 19</td><td><A href="https://www.mutigers.com/sports/fb/news/">Missouri  </a></td><td> W  </td><td> 45 - 14 </td></tr>
+<td>Sept 26</td><td><A href="https://www.dallascowboys.com/">Dallas Cowboys </a> </td><td> T  </td><td> 00 - 00 </td></tr>
+<td>Oct  03</td><td><A href="https://www.psu.edu/sports/football/Football.html">Penn State  </a></td><td> W  </td><td>28 - 09 </td></tr>
+<td>Oct  10</td><td><A href="https://www.fightingillini.com/htm/football/football.html">@ Illinois  </a></td><td> W  </td><td> 41 - 00 </td></tr>
+<td>Oct  17</td><td><A href="https://www.gophersports.com/mFball/">Minnesota  </a></td><td> W  </td><td> 45 - 15 </td></tr>
+<td>Oct  24</td><td><A href="https://www.nusports.com/sports/m-footbl/">@ Northwestern </a></td><td> W  </td><td> 36 - 10 </td></tr>
+<td>Oct  31</td><td><A href="https://www.indiana.edu/~athlweb/graphic/sports/football.html">@ Indiana  </a></td><td> W  </td><td>38 - 7 </td></tr>
+<td>Nov  07</td><td><A href="https://www.indiana.edu/~athlweb/graphic/sports/football.html">Michigan State </a></td><td> L  </td><td><font color=red> 24 - 28 </font></td></tr>
+<td>Nov  14</td><td><A href="https://www.hawkeyesports.com/football/index.htm">@ Iowa   </a></td><td> W  </td><td>45 - 14 </td></tr>
+<td>Nov  21</td><td><A href="https://www.umich.edu/~mgoblue/Football/">scUM  </a></td><td> W  </td><td>31 - 16 </td></tr>
 </table>
 <p><center> and M*ch*g*n still sucks!</center>
 <br></p>
