--- a/webcam/webcam-dave.html
+++ b/webcam/webcam-dave.html
@@ -18,26 +18,30 @@
     <TD WIDTH="50%" bgcolor=brown>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes..
           <!img src="https://bn1304files.storage.live.com/y4mTsP-j-1PBDdGMDeL4XoIclGgi9nkP1Z4Awr2Nj-sLDtj-9Y7hiqYzKiIssd1-7dfgfLjT5Co76rdrk1HWuj7VG2N4KaFU3twNKknk2zkHx8IY-OYvWj-KDtcosH4jG9vj_Xpl3OT8zgnjLs8qKhT1XByxr6r35W1LAMR3wQPAuI?width=660&height=371&cropmode=none" width="660" height="371" />
-          <iframe src="https://drive.google.com/file/d/1-5lrkUfilFPJiq1F-w0LUj8HngoGBtYO/preview" width="640" height="480" allow="autoplay"></iframe>  
-        </TD>
+          <!iframe src="https://drive.google.com/file/d/1-5lrkUfilFPJiq1F-w0LUj8HngoGBtYO/preview" width="640" height="480" allow="autoplay"></iframe>  
+          <img src="https://drive.google.com/uc? export=view&id=1-5lrkUfilFPJiq1F-w0LUj8HngoGBtYO" width="640" height="480" alt="Google Logo"/>
+    </TD>
     <TD WIDTH="50%" bgcolor=brown>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes.
         <!img src="https://bn1304files.storage.live.com/y4mgEO9GpoBH3p3meAzReh-vchVvZWqazcvbmsYMA2Sp9i4-puFpb-GQjnWo0Aw34souItlRUZiJYL1TZNoiTQ7rgBq5ltVG52JVbd7CpGwK0ZoGHucCWAAfLklSLs8hppE0NXH0xJ038Qgdln5gNIJ9cqOzpW9w_VBAo4aKPxTFLE?width=660&height=371&cropmode=none" width="660" height="371" />
-        <iframe src="https://drive.google.com/file/d/1-8dZK_vEDjxBVuVMxPDjaCxxWCq2_bm-/preview" width="640" height="480" allow="autoplay"></iframe>
-      </TD>
+        <!iframe src="https://drive.google.com/file/d/1-8dZK_vEDjxBVuVMxPDjaCxxWCq2_bm-/preview" width="640" height="480" allow="autoplay"></iframe>
+        <img src="https://drive.google.com/uc? export=view&id=1-8dZK_vEDjxBVuVMxPDjaCxxWCq2_bm-" width="640" height="480" alt="Google Logo"/>
+    </TD>
   </TR>
 
  <TR>
     <TD WIDTH="50%" bgcolor=gray>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes..
         <!img src="https://bn1304files.storage.live.com/y4mWqg2g7wrT8X_ceMegui9niFHvN8pafYogH7HT280krPxeSrfQVj4LPDV00lnAYZZ2vmLkHSeZgh8qlTCunFdHElONg2gZXmuurJwI0wtWKgjB0UGj4OmWVacqL6K0ZFuNpJBwObTMh1WG71DLGlFIJJokbHfFKr-0Z82QjN3TSA?width=660&height=371&cropmode=none" width="660" height="371" />
-        <iframe src="https://drive.google.com/file/d/1-7skTa1BP1pxt73K89hEW1g8xw43A9J6/preview" width="640" height="480" allow="autoplay"></iframe> 
-      </TD>
+        <!iframe src="https://drive.google.com/file/d/1-7skTa1BP1pxt73K89hEW1g8xw43A9J6/preview" width="640" height="480" allow="autoplay"></iframe> 
+        <img src="https://drive.google.com/uc? export=view&id=1-7skTa1BP1pxt73K89hEW1g8xw43A9J6" width="640" height="480" alt="Google Logo"/>
+    </TD>
     <TD WIDTH="50%" bgcolor=brown>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes.
         <!img src="https://bn1304files.storage.live.com/y4m41TVQ0AaR3fF2JdbVzuLsddEJck4c080Fewi-pjStIeLrEx2TBbQXivQcwlnktAQ141seQuW0BQBh7m-oK6UxdLgYWJ2HNZiUHruCZwxCwTKyV2Dw38Ur7CAJ65og0PnW0ORxy7zHtUmEOTBcDoAKtiV2VQC6sOt44GMzDTuqz8?width=660&height=495&cropmode=none" width="660" height="495" />
-        <iframe src="https://drive.google.com/file/d/1-1-trng5datzHjAS5EzQPt33Iory11qB/preview" width="640" height="480" allow="autoplay"></iframe>
-      </TD>
+        <!iframe src="https://drive.google.com/file/d/1-1-trng5datzHjAS5EzQPt33Iory11qB/preview" width="640" height="480" allow="autoplay"></iframe>
+        <img src="https://drive.google.com/uc? export=view&id=1-1-trng5datzHjAS5EzQPt33Iory11qB" width="640" height="480" alt="Google Logo"/>
+    </TD>
   </TR>
 </TABLE><BR>
   <P><CENTER>&nbsp; <FONT FACE=Arial Size=5 color=black>Note: Firefox and Internet Explorer should automatically update every 2 minutes. Other browsers do not auto update (use Ctrl + Reload).
