--- a/webcam/webcam-dave.html
+++ b/webcam/webcam-dave.html
@@ -21,7 +21,7 @@
           <!iframe src="https://drive.google.com/file/d/1-5lrkUfilFPJiq1F-w0LUj8HngoGBtYO/preview" width="640" height="480" allow="autoplay"></iframe>  
           <img src="https://drive.google.com/uc? export=view&id=1-5lrkUfilFPJiq1F-w0LUj8HngoGBtYO" width="640" height="480" alt="Google Logo"/>
     </TD>
-    <TD WIDTH="50%" bgcolor=brown>
+    <TD WIDTH="50%" bgcolor=gray>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 2 minutes.
         <!img src="https://bn1304files.storage.live.com/y4mgEO9GpoBH3p3meAzReh-vchVvZWqazcvbmsYMA2Sp9i4-puFpb-GQjnWo0Aw34souItlRUZiJYL1TZNoiTQ7rgBq5ltVG52JVbd7CpGwK0ZoGHucCWAAfLklSLs8hppE0NXH0xJ038Qgdln5gNIJ9cqOzpW9w_VBAo4aKPxTFLE?width=660&height=371&cropmode=none" width="660" height="371" />
         <!iframe src="https://drive.google.com/file/d/1-8dZK_vEDjxBVuVMxPDjaCxxWCq2_bm-/preview" width="640" height="480" allow="autoplay"></iframe>
