edits to schedules

--- a/index.html
+++ b/index.html
@@ -41,25 +41,30 @@ See our <A href="ccf.html"> "adopted" children </A>
 <center><h2>OHIO STATE BUCKEYES <a href="https://www.ohiostatebuckeyes.com/sports/m-footbl/sched/osu-m-footbl-sched.html">Football </a> Schedule </h2></center>
 <center><img align=bottom alt="New!" src="Images/new3.gif"></center>
 
+
 <!--......................................................................................................-->
-<center><h1> 2021 </h1><br></center>
+
+<center><h1> 2022 </h1><br></center>
 <table border="1" align="center" >
-  <tr><td>Sep 02</td><td class="has-text-align-left" data-align="left">@ Minnesota    </td><td> 8:00 Fox </td><td> W 45 - 31 </td><td>          </td></tr>
-  <tr><td>Sep 11</td><td class="has-text-align-left" data-align="left">Oregon         </td><td> Noon Fox </td><td> L 28 - 35 </td><td>          </td></tr>
-  <tr><td>Sep 18</td><td class="has-text-align-left" data-align="left">Tulsa          </td><td> 3:30 FS1 </td><td> W 41 - 20 </td><td>          </td></tr>
-  <tr><td>Sep 25</td><td class="has-text-align-left" data-align="left">Akron          </td><td> 7:30 BTN </td><td> W 59 - 7  </td><td>           </td></tr>
-  <tr><td>Oct 02</td><td class="has-text-align-left" data-align="left">@ Rutgers      </td><td> 3:30 BTN </td><td> W 52 - 13 </td><td>          </td></tr>
-  <tr><td>Oct 09</td><td class="has-text-align-left" data-align="left">Maryland       </td><td> Noon Fox </td><td> W 66 - 17 </td><td>          </td></tr>
-  <tr><td>Oct 23</td><td class="has-text-align-left" data-align="left">@ Indiana      </td><td> 7:30 ABC </td><td> W 54 - 7  </td><td>------ Note ------</td></tr>
-  <tr><td>Oct 30</td><td class="has-text-align-left" data-align="left">Penn State     </td><td> 7:30 ABC </td><td> W 33 - 24 </td><td>          </td></tr>
-  <tr><td>Nov 06</td><td class="has-text-align-left" data-align="left">@ Nebraska     </td><td> Noon Fox </td><td> W 26 - 17 </td><td>          </td></tr>
-  <tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Purdue         </td><td> 3:30 ABC </td><td> W 59 - 31 </td><td>          </td></tr>
-  <tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Michigan State </td><td> Noon Fox </td><td> W 56 - 7  </td><td>          </td></tr>
-  <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> Noon Fox </td><td> L 27 - 42 </td><td>          </td></tr>
-</table></center>
-<center><h3>Jan 01, 2022  Rose Bowl vs. Utah 5:00 PM ESPN W 48 - 45</h3></center>
+
+
+<tr><td>Sep 03</td><td class="has-text-align-left" data-align="left">Notre Dame    </td><td>TBA</td><td>W </td><td>note</td></tr>
+<tr><td>Sep 10</td><td class="has-text-align-left" data-align="left">Arkansas State</td><td></td><td></td><td></td></tr>
+<tr><td>Sep 17</td><td class="has-text-align-left" data-align="left">Toledo        </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 24</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td></td><td></td><td></td></tr>
+<tr><td>Oct 01</td><td class="has-text-align-left" data-align="left">@ Penn State  </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 08</td><td class="has-text-align-left" data-align="left">Rutgers       </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 15</td><td class="has-text-align-left" data-align="left">Iowa          </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 22</td><td class="has-text-align-left" data-align="left">BYE           </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 29</td><td class="has-text-align-left" data-align="left">Indiana       </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 05</td><td class="has-text-align-left" data-align="left">@ Northwestern</td><td></td><td></td><td></td></tr>
+<tr><td>Nov 12</td><td class="has-text-align-left" data-align="left">Wisconsin     </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 19</td><td class="has-text-align-left" data-align="left">@ Maryland    </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 26</td><td class="has-text-align-left" data-align="left">scUM          </td><td></td><td></td><td></td></tr>
+
 <!-- /wp:table -->
 </table>
+
 <!--......................................................................................................-->
 
 <h3>
@@ -74,6 +79,8 @@ See our <A href="ccf.html"> "adopted" children </A>
 <a href="osu2023.html"> 2023 Football schedule </a>
 <p>
 <hr />
+<a href="osu21.html"> 2021 Football results </a>
+<p>
 <a href="osu20.html"> 2020 Football results </a>
 <p>
 <a href="osu19.html"> 2019 Football results </a>
