--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <table border="1" align="center" >
 
 
-<tr><td>Sep 03</td><td class="has-text-align-left" data-align="left">Notre Dame    </td><td>TBA</td><td>W </td><td>note</td></tr>
+<tr><td>Sep 03</td><td class="has-text-align-left" data-align="left">Notre Dame    </td><td>TBA</td><td>W </td><td>----note----</td></tr>
 <tr><td>Sep 10</td><td class="has-text-align-left" data-align="left">Arkansas State</td><td></td><td></td><td></td></tr>
 <tr><td>Sep 17</td><td class="has-text-align-left" data-align="left">Toledo        </td><td></td><td></td><td></td></tr>
 <tr><td>Sep 24</td><td class="has-text-align-left" data-align="left">Wisconsin     </td><td></td><td></td><td></td></tr>
