--- a/osu21.html
+++ b/osu21.html
@@ -13,7 +13,7 @@
 <center><h1> 2021 </h1><br></center>
 <table border="1" align="center" >
   <tr><td>Sep 02</td><td class="has-text-align-left" data-align="left">@ Minnesota    </td><td> 8:00 Fox </td><td> W 45 - 31 </td><td>          </td></tr>
-  <tr><td>Sep 11</td><td class="has-text-align-left" data-align="left">Oregon         </td><td> Noon Fox </td><td> L 28 - 35 </td><td>          </td></tr>
+  <tr><td>Sep 11</td><td class="has-text-align-left" data-align="left">Oregon         </td><td> Noon Fox </td><td> <font color = red>L 28 - 35 </font></td><td>          </td></tr>
   <tr><td>Sep 18</td><td class="has-text-align-left" data-align="left">Tulsa          </td><td> 3:30 FS1 </td><td> W 41 - 20 </td><td>          </td></tr>
   <tr><td>Sep 25</td><td class="has-text-align-left" data-align="left">Akron          </td><td> 7:30 BTN </td><td> W 59 - 7  </td><td>           </td></tr>
   <tr><td>Oct 02</td><td class="has-text-align-left" data-align="left">@ Rutgers      </td><td> 3:30 BTN </td><td> W 52 - 13 </td><td>          </td></tr>
@@ -23,7 +23,7 @@
   <tr><td>Nov 06</td><td class="has-text-align-left" data-align="left">@ Nebraska     </td><td> Noon Fox </td><td> W 26 - 17 </td><td>          </td></tr>
   <tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Purdue         </td><td> 3:30 ABC </td><td> W 59 - 31 </td><td>          </td></tr>
   <tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Michigan State </td><td> Noon Fox </td><td> W 56 - 7  </td><td>          </td></tr>
-  <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> Noon Fox </td><td> L 27 - 42 </td><td>          </td></tr>
+  <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> Noon Fox </td><td> <font color = red>L 27 - 42 </font></td><td>          </td></tr>
 </table></center>
 <center><h3>Jan 01, 2022  Rose Bowl vs. Utah 5:00 PM ESPN W 48 - 45</h3></center>
 <!-- /wp:table -->
