--- a/osu2023.html
+++ b/osu2023.html
@@ -19,11 +19,11 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2023 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Sep 02</td><td class="has-text-align-left" data-align="left">@ Indiana       </td><td>TBA</td><td>W </td><td>note</td></tr>
-<tr><td>Sep 09</td><td class="has-text-align-left" data-align="left">San Jose State  </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 02</td><td class="has-text-align-left" data-align="left">      </td><td>TBA</td><td>W </td><td>note</td></tr>
+<tr><td>Sep 09</td><td class="has-text-align-left" data-align="left">Youngstown State  </td><td></td><td></td><td></td></tr>
 <tr><td>Sep 16</td><td class="has-text-align-left" data-align="left">Western Kentucky</td><td></td><td></td><td></td></tr>
 <tr><td>Sep 23</td><td class="has-text-align-left" data-align="left">@ Notre Dame    </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">BYE             </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">             </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 07</td><td class="has-text-align-left" data-align="left">Maryland        </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 14</td><td class="has-text-align-left" data-align="left">@ Purdue        </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 21</td><td class="has-text-align-left" data-align="left">Penn State      </td><td></td><td></td><td></td></tr>
