--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@ See our <A href="ccf.html"> "adopted" children </A>
 <table border="1" align="center" >
 
 
-<tr><td>Sep 03</td><td class="has-text-align-left" data-align="left">Notre Dame      </td><td>TBA</td><td>W </td><td>----note----</td></tr>
-<tr><td>Sep 10</td><td class="has-text-align-left" data-align="left">Arkansas State  </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 17</td><td class="has-text-align-left" data-align="left">Toledo          </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 24</td><td class="has-text-align-left" data-align="left">Wisconsin       </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 01</td><td class="has-text-align-left" data-align="left">Rutgers         </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 08</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td></td><td></td><td></td></tr>
-<tr><td>Oct 15</td><td class="has-text-align-left" data-align="left"> BYE            </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 22</td><td class="has-text-align-left" data-align="left">Iowa            </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 29</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 05</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 12</td><td class="has-text-align-left" data-align="left">Indiana         </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 19</td><td class="has-text-align-left" data-align="left">@ Maryland      </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 26</td><td class="has-text-align-left" data-align="left">scUM            </td><td></td><td></td><td></td></tr>
-<tr><td>Dec 03</td><td class="has-text-align-left" data-align="left">B1G Champ Game  </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 03</td><td class="has-text-align-left" data-align="left">Notre Dame      </td><td>7:30 ABC</td><td>W </td><td>----note----</td></tr>
+<tr><td>Sep 10</td><td class="has-text-align-left" data-align="left">Arkansas State  </td><td>Noon BTN</td><td></td><td></td></tr>
+<tr><td>Sep 17</td><td class="has-text-align-left" data-align="left">Toledo          </td><td>7:00 Fox</td><td></td><td></td></tr>
+<tr><td>Sep 24</td><td class="has-text-align-left" data-align="left">Wisconsin       </td><td>TBA </td><td></td><td></td></tr>
+<tr><td>Oct 01</td><td class="has-text-align-left" data-align="left">Rutgers         </td><td>3:30 </td><td></td><td></td></tr>
+<tr><td>Oct 08</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td>TBA </td><td></td><td></td></tr>
+<tr><td>Oct 15</td><td class="has-text-align-left" data-align="left"> BYE            </td><td>TBA </td><td></td><td></td></tr>
+<tr><td>Oct 22</td><td class="has-text-align-left" data-align="left">Iowa            </td><td>TBA </td><td></td><td></td></tr>
+<tr><td>Oct 29</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>TBA </td><td></td><td></td></tr>
+<tr><td>Nov 05</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>TBA </td><td></td><td></td></tr>
+<tr><td>Nov 12</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>TBA </td><td></td><td></td></tr>
+<tr><td>Nov 19</td><td class="has-text-align-left" data-align="left">@ Maryland      </td><td>TBA </td><td></td><td></td></tr>
+<tr><td>Nov 26</td><td class="has-text-align-left" data-align="left">scUM            </td><td>Noon Fox </td><td></td><td></td></tr>
+<tr><td>Dec 03</td><td class="has-text-align-left" data-align="left">B1G Champ Game  </td><td>8:00 </td><td></td><td></td></tr>
 
 <!-- /wp:table -->
 </table>
